--- a/page.html
+++ b/page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
@@ -18,7 +19,7 @@
       </nav>
     </header>
     <section class="section01">
-      <h2 calss="section-heading">UI/UX & Graphic Designer</h2>
+      <h2 class="section-heading">UI/UX & Graphic Designer</h2>
       <p class="paragragh">
         W3C는 2014년 10월 28일<br />
         HTML5 표준안을 확정했다고 발표했다.
@@ -32,7 +33,7 @@
         <figure class="figure">
           <video autoplay muted loop>
             <source
-              src="/videos/mov_bbb.mp4"
+              src="videos/mov_bbb.mp4"
               type="video/mp4"
               class="figure-video"
             />
@@ -66,7 +67,7 @@
         <figure class="figure">
           <video autoplay loop muted>
             <source
-              src="/videos/rain.mp4"
+              src="videos/rain.mp4"
               type="video/mp4"
               class="figure-video"
             />
