--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <style>
       #heading {
         color: red;
+        text-align: center;
       }
       .type-text {
         text-decoration: underline;
+        text-align: right;
       }
       #paragraph {
         color: green;
