--- a/index.html
+++ b/index.html
@@ -11,14 +11,37 @@
         text-align: center;
       }
       .type-text {
-        text-decoration: underline;
-        text-align: right;
+        text-decoration: line-through;
+        white-space: nowrap;
       }
       #paragraph {
         color: green;
       }
       .text {
         font-size: 20px;
+        text-indent: 20px;
+      }
+      a {
+        text-decoration: none;
+      }
+      .line1 {
+        line-height: 40px;
+      }
+      .line2 {
+        line-height: 1.6; /*배수의 형태*/
+      }
+      a:link {
+        color: red;
+      }
+      a:visited {
+        color: green;
+      }
+      a:hover {
+        color: aqua;
+        text-decoration: underline;
+      }
+      a:active {
+        color: blanchedalmond;
       }
     </style>
   </head>
@@ -26,26 +49,26 @@
     <h1 id="heading">HTML5</h1>
     <hr />
     <hr />
-    <p class="text type-text" id="paragraph">
+    <p class="text type-text line1" id="paragraph">
       HTML5는
       <a href="https://ko.wikipedia.org/wiki/HTML">HTML</a>의 완전한 5번째
       버전으로 월드 와이드 웹 (World Wide Web)의 핵심 마크업 언어이다. 2004년
       7월 Web Hypertext Application Technology Working Group(WHATWG)에서 웹
       애플리케이션 1.0이라는 이름으로 세부 명세 작업을 시작하였다.
     </p>
-    <p class="text type-text">
+    <p class="text type-text line2">
       HTML5는 HTML 4.01,
       <a href="https://ko.wikipedia.org/wiki/XHTML" target="_blank">XHTML</a>
       1.0, DOM 레벨 2 HTML에 대한 차기 표준 제안이다. 비디오, 오디오 등 다양한
       부가기능과 최신 멀티미디어 콘텐츠를 액티브X 없이 브라우저에서 쉽게 볼 수
       있게 하는 것을 목적으로 한다.
     </p>
-    <p>
+    <p class="text">
       W3C는&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2014년 10월 28일<br />
       HTML5 표준안을<br />
       확정했다고 발표했다.
     </p>
-    <p>
+    <p class="text type-text">
       이후 2016년 11월 1일 HTML5의 마이너 업데이트 버전인 HTML5.1 표준안을 확정,
       2017년 12월 14일 HTML5.2 표준안을 확정했다. HTML5.3 표준안은 현재 작업
       초안 단계로 진행 중이다.
