--- a/page.html
+++ b/page.html
@@ -43,6 +43,7 @@
         W3C는 2014년 10월 28일<br />
         HTML5 표준안을 확정했다고 발표했다.
       </p>
+      <a href="" class="more-link">더보기</a>
     </section>
     <section class="section02">
       <div class="group">
